Revision history for {{$dist->name}}

{{$NEXT}}
          - switched examples to using object-based syntax, to make it more
            clear that there is no monkey-patching (RT#86830)

0.018     2013-03-22 11:08:50 PDT-0700 (Karen Etheridge)
          - fix test failures under newer perls by ensuring that serialized
            comparisons are always performed canonically

0.017     2013-03-22 10:48:34 PDT-0700 (Karen Etheridge)
          - really fix RT#84094 this time

0.016     2013-03-20 23:01:47 PDT-0700 (Karen Etheridge)
          - fixed handling of methods such as mirror() (RT#84094) - thanks for
            the report, Tom Hukins!

0.015     2013-02-09 16:55:18 PST-0800 (Karen Etheridge)
          - can now create a mapping on a class name or an object where that
            class or object implements the 'request' method (from a suggestion
            by mst)

0.014     2012-12-12 10:29:39 PST-0800 (Karen Etheridge)
          - fix advent link in pod

0.013     2012-12-12 10:24:49 PST-0800 (Karen Etheridge)
          - silly mistake in examples/application_client_test.pl fixed
          - link to today's Perl Advent Calendar entry, about this module :)

0.012     2012-12-01 22:57:01 PST-0800 (Karen Etheridge)
          - examples/ directory added, containing fleshed-out code snippets
            used in the article for the 2012 Perl Advent Calendar, and a
            detailed example of some unit tests for a client library

0.011     2012-10-16 11:37:48 PDT-0700 (Karen Etheridge)
          - remove additional options in constructor before passing to
            LWP::UserAgent (was causing a carp when $^W was set) - thanks for
            the report and patch, Nigel Gregoire and Michael Schulthess!
          - all remaining uses of eval eliminated, by using better heuristics
            for "can be used as a coderef" logic

0.010     2012-10-06 16:47:33 PDT-0700 (Karen Etheridge)
          - documentation on integration with XML::Compile::SOAP